[gd_scene load_steps=6 format=2]

[ext_resource path="res://UI/DeathScreen/DeathScrean.tscn" type="PackedScene" id=1]
[ext_resource path="res://UI/Buttons/ButtonScene.gd" type="Script" id=2]
[ext_resource path="res://Style/new_theme.tres" type="Theme" id=3]
[ext_resource path="res://UI/MainMenu/MainMenu.tscn" type="PackedScene" id=4]
[ext_resource path="res://UI/Multi/Multi.gd" type="Script" id=5]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EX" type="Button" parent="."]
margin_left = 824.0
margin_top = 550.0
margin_right = 1024.0
margin_bottom = 600.0
rect_min_size = Vector2( 200, 50 )
size_flags_horizontal = 4
size_flags_vertical = 6
theme = ExtResource( 3 )
toggle_mode = true
keep_pressed_outside = true
text = "Exit"
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}
scene_to_open = ExtResource( 4 )

[node name="Create" type="Button" parent="."]
margin_left = 123.0
margin_top = 200.0
margin_right = 323.0
margin_bottom = 250.0
rect_min_size = Vector2( 200, 50 )
size_flags_horizontal = 4
size_flags_vertical = 6
theme = ExtResource( 3 )
toggle_mode = true
keep_pressed_outside = true
text = "Create"
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}
scene_to_open = ExtResource( 1 )

[node name="Connect" type="Button" parent="."]
margin_left = 700.0
margin_top = 200.0
margin_right = 900.0
margin_bottom = 250.0
rect_min_size = Vector2( 200, 50 )
size_flags_horizontal = 4
size_flags_vertical = 6
theme = ExtResource( 3 )
toggle_mode = true
keep_pressed_outside = true
text = "Connect"
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}
scene_to_open = ExtResource( 1 )

[node name="Node2D" type="Node2D" parent="."]

[connection signal="mouse_entered" from="Create" to="." method="_start_button_show1"]
[connection signal="mouse_exited" from="Create" to="." method="_start_button_unshow1"]
[connection signal="mouse_entered" from="Connect" to="." method="_start_button_show2"]
[connection signal="mouse_exited" from="Connect" to="." method="_start_button_unshow2"]
